@@ -11,6 +11,7 @@ require("data.migrations.migration_0_17_61")
 require("data.migrations.migration_0_17_65")
 require("data.migrations.migration_0_18_20")
 require("data.migrations.migration_0_18_27")
+require("data.migrations.migration_0_18_29")
 
 -- This code handles the general migration process of the mod's global table
 -- It decides whether and which migrations should be applied, in appropriate order
@@ -30,6 +31,7 @@ migration_masterlist = {
     [11] = {version="0.17.65"},
     [12] = {version="0.18.20"},
     [13] = {version="0.18.27"},
+    [14] = {version="0.18.29"},
 }
 
 -- Applies any appropriate migrations to the global table
