@@ -11,5 +11,6 @@
     "0.17.61",
     "0.17.65",
     "0.18.20",
-    "0.18.27"
+    "0.18.27",
+    "0.18.29"
 ]
