@@ -169,7 +169,7 @@ type_notes=Notes__1____2__
 # Product dialog
 add_product=Add Product
 edit_product=Edit Product
-amount_by_belts=Amount by belts
+amount_by=Amount by __1__
 product_instruction_1=Specify a product and an amount
 search=Search
 error_no_item_found=There are no items that match your search term.
@@ -212,8 +212,8 @@ add_beacon=Add Beacon
 edit_beacon=Edit Beacon
 no_compatible_module=No compatible module found
 module_instruction_1=Specify a module and an amount
-module_instruction_2_1=Module amount must be 
-module_instruction_2_2=between 1 and 
+module_instruction_2=Module amount must be __1__  __2__
+module_instruction_2_addendum=between 1 and
 beacon_instruction_1=Specify both a beacon and module
 max_modules=Set the amount of modules so they fill up all empty slots on the machine.
 current_module=This is the module you are currently editing.
