@@ -2,12 +2,13 @@
 Version: 0.00.00
 Date: 00. 00. 0000
   Features:
-    - 
+    -
   Changes:
+    - The product picker now reflects your preference for thinking in terms of belts or lanes
     - You can now change fuels (up/downgrade) of a recipe line by shift/ctrl-clicking them
     - Added some warnings when automatically adding your preferred machine or beacon does not work for compatibility reasons. Also added some warning messages when up/downgrading machines and beacons.
   Bugfixes:
-    - 
+    -
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.28
